# XMBar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE.md  README.md  build_app.sh  build_dmg.sh
libmdr/: CMakeLists.txt
libmdr/include/: CMakeLists.txt
libmdr/include/mdr/: Headphones.hpp  Protocol.hpp  ProtocolV2T1.hpp
libmdr/include/mdr-c/: Base.h
libmdr/src/: CMakeLists.txt  Command.cpp  Headphones.cpp  HeadphonesV2.cpp  HeadphonesV2T1.cpp
libmdr/src/Platform/: CMakeLists.txt
libmdr/src/Platform/MacOS/: CMakeLists.txt
macos-native/: CMakeLists.txt  Info.plist  MDRNativeBridge.cpp  MDRNativeBridge.h  build_app.sh  create_dmg.sh
macos-native/Resources/: AppIcon.icns
macos-native/Sources/XMBar/: main.swift
